--- a/src/AdminBundle/Resources/views/Home/index.html.twig
+++ b/src/AdminBundle/Resources/views/Home/index.html.twig
@@ -12,13 +12,9 @@
 
 {% block breadcrumb %}
     {{ parent() }}
-    <li class="active">Sessions</li>
 {% endblock %}
 
 {% block h1_extend %}
-    <a class="btn btn-primary" href="{{ path('admin_graph_index') }}">View Graph</a>
-    <a class="btn btn-primary" href="{{ path('admin_entity_insert') }}">Insert Fetch</a>
-    <a class="btn btn-primary" href="{{ path('admin_entity_viewWaitingFetch') }}">Waiting Fetch</a>
 {% endblock %}
     
 {% block content %}
@@ -31,47 +27,23 @@
                 <br />
             {% endfor %}
 
-            <table class="table table-striped table-bordered">
-                <caption>{{ sessions.getTotalItemCount }} sessions</caption>
-                <tr>
-                    <th>#</th>
-                    <th>User</th>
-                    <th>Context</th>
-                    <th>Date</th>
-                </tr>
-                {% for session in sessions %}
-                    <tr>
-                        <td>{{ ((sessions.getPaginationData.current-1)*100)+loop.index }}</td>
-                        <td>
-                            {% if session.context == "facebook_messenger" %}
-                            <dl class="dl-horizontal">
-                                <dt>Fb ID</dt>
-                                <dd>{{ session.createUserFacebookId }}</dd>
-                            </dl>
-                            <dl class="dl-horizontal">
-                                <dt>Fb Locale</dt>
-                                <dd>{{ session.createUserFacebookLocale }}</dd>
-                            </dl>
-                            <dl class="dl-horizontal">
-                                <dt>Fb Ref</dt>
-                                <dd>{{ session.createUserFacebookRef }}</dd>
-                            </dl>
-                            <dl class="dl-horizontal">
-                                <dt>Fb Timezone</dt>
-                                <dd>{{ session.createUserFacebookTimezone }}</dd>
-                            </dl>
-                            {% endif %}
-                        </td>
-                        <td>{{ session.context }}</td>
-                        <td>{{ session.createDate|date('m-d-Y') }}</td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="4">No sessions</td>
-                    </tr>
-                {% endfor %}
-            </table>
-            <div class="text-center">{{ knp_pagination_render(sessions) }}</div>
+            <div class="well">
+                <h2>Admin Links</h2>
+
+                <ul>
+                    <li><a href="{{ path('admin_evaluation_user_index') }}">Users list</a></li>
+                </ul>
+                <hr />
+                <ul>
+                    <li><a href="{{ path('admin_entity_insert') }}">Insert Fetch</a></li>
+                    <li><a href="{{ path('admin_entity_viewWaitingFetch') }}">Waiting Fetch</a></li>
+                    <li><a href="{{ path('admin_entity_resetFetch') }}">Reset Fetch</a></li>
+                </ul>
+                <hr />
+                <ul>
+                    <li><a href="{{ path('admin_graph_index') }}">View Graph</a></li>
+                </ul>
+            </div>
         </section>
     </div>
 {% endblock %}
