--- a/src/AdminBundle/Resources/views/EvaluationUser/view-session-singleEvaluation-tpl.html.twig
+++ b/src/AdminBundle/Resources/views/EvaluationUser/view-session-singleEvaluation-tpl.html.twig
@@ -6,7 +6,15 @@
     </dl>
     <dl class="dl-horizontal">
         <dt>Rate</dt>
-        <dd>{% if proposalContainer['proposal'].rateValue != null %}{{ proposalContainer['proposal'].rateValue }}{% else %}<span class="text-warning">NO VALUE</span>{% endif %}</dd>
+        <dd>
+            {% if proposalContainer['proposal'].rateValue != null %}
+                <span class="label label-{% if proposalContainer['proposal'].rateValue == 1 %}primary{% else %}default{% endif %}">1</span>
+                <span class="label label-{% if proposalContainer['proposal'].rateValue == 2 %}primary{% else %}default{% endif %}">2</span>
+                <span class="label label-{% if proposalContainer['proposal'].rateValue == 3 %}primary{% else %}default{% endif %}">3</span>
+                <span class="label label-{% if proposalContainer['proposal'].rateValue == 4 %}primary{% else %}default{% endif %}">4</span>
+                <span class="label label-{% if proposalContainer['proposal'].rateValue == 5 %}primary{% else %}default{% endif %}">5</span>
+            {% else %}<span class="text-warning">NO VALUE</span>{% endif %}
+        </dd>
     </dl>
     <dl class="dl-horizontal">
         <dt>Algorithm</dt>
