--- a/src/AdminBundle/Resources/views/EvaluationUser/view.html.twig
+++ b/src/AdminBundle/Resources/views/EvaluationUser/view.html.twig
@@ -16,6 +16,7 @@
 {% endblock %}
 
 {% block h1_extend %}
+    <input type="text" class="form-control" value="http://europeana-evaluation.karl-pineau.fr/admin/7jCqTsRaGlUNwpe/user/{{ user.id }}" />
 {% endblock %}
     
 {% block content %}
